feat(import): duplicate definition data to flow nodes (#3751)
relates to #OPT-5439